--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </div>
             </div>
             <p>
-               My goal is to always build products that provide pixel-perfect, performant experiences. I have worked in a startup project "Shikkhabritti" in my university for senior design course which is a scholarship management system and live on the server.
+               My goal is to always build products that provide pixel-perfect, performant experiences. I have worked in a startup project <a href="www.shikkhabritti.com" target="_blank"> "Shikkhabritti"</a> in my university for senior design course which is a scholarship management system and live on the server.
             </p>
           </div>
         </div>
