--- a/index.html
+++ b/index.html
@@ -380,12 +380,9 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section><!-- End Portfolio Section --><br><br><br><br><br><br> 
 
 
-
-
-    <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
@@ -419,7 +416,10 @@
 
           </div>
 
+
         </div>
+
+      </div>
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
